tests/error/tracing_errors/comptime_flags_nested_power_control.err
Error: Control constraint violation (at $FILE:16:12)
   | 
14 |     with power(2):
15 |         with control(ctrl):
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a control context

Help: Consider adding the flag `(control=True)` to the decorator of the function
`foo`

Guppy compilation failed due to 1 previous error
